Added Debian description.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -354,6 +354,6 @@ db {
 
 slick.dbs.default.driver = "slick.driver.MySQLDriver$"
 slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
-slick.dbs.default.db.url = "jdbc:mysql://localhost:3306/dragondata"
+slick.dbs.default.db.url = "jdbc:mysql://10.9.8.1:3306/dragondata"
 slick.dbs.default.db.user = "dragon"
 slick.dbs.default.db.password = "dragon"
